service-download.yaml
apiVersion: v1
kind: Service
metadata:
  name: downloadservice
spec:
  selector:
    app: download-deployment
  ports:
    - port: 80
      targetPort: 3010
      nodePort: 30115
  type: LoadBalancer
