service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontservice
spec:
  selector:
    app: front-deployment
  ports:
    - port: 80
      targetPort: 5173
  type: ClusterIP
