service-principal.yaml
apiVersion: v1
kind: Service
metadata:
  name: principalservice
spec:
  selector:
    app: service-principal-deployment
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
