ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.dar.reformaperu.org
    secretName: tls-secret
  rules:
  - host: app.dar.reformaperu.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontservice
            port:
              number: 80
